# perfect-derive

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: impls.rs  lib.rs  perfect_macro.rs  perfect_parsing.rs
tests/: default_tests.rs  perfect_derive_base_macro.rs  perfect_derive_simple_generic_macro.rs  recursive_generic_tests.rs
